Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24644

Warning text marks are barely visible in certain IDE/editor theme combinations

XMLWordPrintable

    • e371eafd4bde6f83ca7c9dd1373e41017851fe42 (qt-creator/qt-creator/4.13)

      I use a dark IDE / light editor combination of themes to help me focus on the code without going fullscreen code. This generally works quite well except that warning text marks are barely legible - see the screenshot.

      Looking into the Qt Creator code (https://code.woboq.org/qt5/qt-creator/src/plugins/texteditor/textmark.cpp.html#142) it seems that instead of using the background colour from the current editor style the general background colour (configured by PaletteBase setting in the theme file - playing with it confirms this guess) is used to ensure that the warning foreground colour is distinct on the text mark background. It would be more correct to use the editor background colour to calculate the warning foreground colour.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            alexey.rusakov Alexey Rusakov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes