Editor: Calculate annotation color based on editor color scheme

Amends 9182d4eda75033bbbebf50e87e518adc33d499f6

Fixes: QTCREATORBUG-24644
Change-Id: Id34bfbc4ea3d1102835c7c1cf3afa1580dff01d8
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>